added stub functions and stub apis, updated data.js to prototype, and fixed swagger
